--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">aytona_fahmy_project</string>
+    <string name="app_name">Organizer Buddy</string>
 </resources>
